@@ -857,7 +857,7 @@ int	zbx_db_commit(void)
 	}
 
 	if (1 == txn_error)
-		goto rollback;
+		return ZBX_DB_FAIL; /* commit called on failed transaction */
 
 #if defined(HAVE_IBM_DB2)
 	if (SUCCEED != zbx_ibm_db2_success(SQLEndTran(SQL_HANDLE_DBC, ibm_db2.hdbc, SQL_COMMIT)))
@@ -879,19 +879,14 @@ int	zbx_db_commit(void)
 	rc = zbx_db_execute("%s", "commit;");
 #endif
 
-	if (ZBX_DB_FAIL == rc)
-	{
-rollback:
-		zabbix_log(LOG_LEVEL_DEBUG, "commit called on failed transaction, doing a rollback instead");
-		return zbx_db_rollback();
-	}
+	if (ZBX_DB_OK > rc)
+		return rc; /* commit failed */
 
 #ifdef HAVE_SQLITE3
 	zbx_mutex_unlock(&sqlite_access);
 #endif
 
-	if (ZBX_DB_DOWN != rc)	/* ZBX_DB_OK or number of changes */
-		txn_level--;
+	txn_level--;
 
 	return rc;
 }
@@ -907,7 +902,7 @@ rollback:
  ******************************************************************************/
 int	zbx_db_rollback(void)
 {
-	int	rc = ZBX_DB_OK, last_txn_error;
+	int	rc = ZBX_DB_OK;
 #ifdef HAVE_ORACLE
 	sword	err;
 #endif
@@ -918,8 +913,6 @@ int	zbx_db_rollback(void)
 				" Please report it to Zabbix Team.");
 		assert(0);
 	}
-
-	last_txn_error = txn_error;
 
 	/* allow rollback of failed transaction */
 	txn_error = 0;
@@ -951,10 +944,9 @@ int	zbx_db_rollback(void)
 	zbx_mutex_unlock(&sqlite_access);
 #endif
 
-	if (ZBX_DB_DOWN != rc)	/* ZBX_DB_FAIL or ZBX_DB_OK or number of changes */
-		txn_level--;
-	else
-		txn_error = last_txn_error;	/* in case of DB down we will repeat this operation */
+	/* There is no way to recover from rollback errors, so there is no need to preserve transaction level / error. */
+	txn_level = 0;
+	txn_error = 0;
 
 	return rc;
 }
